--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MySongBank</string>
+    <string name="text_image_is_expand">is_expand</string>
 </resources>
