--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MySongBank</string>
     <string name="text_image_is_expand">is_expand</string>
-    <string name="edit_text_song_name_hint">SongTitle</string>
+    <string name="edit_text_song_name_hint">Song\'s Name</string>
     <string name="edit_text_singer_hint">Singer</string>
     <string name="edit_text_key_hint">Song\'s Key</string>
     <string name="edit_text_memo_hint">Song\'s Memo</string>
