add function of sort by specified key with ProtoDataStore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,12 @@
     <string name="text_add">add</string>
     <string name="text_delete">delete</string>
     <string name="text_cancel">cancel</string>
+    <string name="sorted_by">SORTED BY</string>
+
+    <string-array name="sort_option">
+        <item>ID</item>
+        <item>NAME</item>
+        <item>SINGER</item>
+        <item>KEY</item>
+    </string-array>
 </resources>
